spacing fix

--- a/app/src/helpers.module.css
+++ b/app/src/helpers.module.css
@@ -25,3 +25,7 @@ Utility classes
 .alignItemsCenter {
   align-items: center;
 }
+
+.m0 {
+  margin: 0;
+}
